# deploy_django_on_render

./: .flake8  .gitignore  README.md  build.sh  manage.py  pyproject.toml  render.yaml
authentication/: admin.py  forms.py  models.py  views.py
authentication/migrations/: 0001_initial.py
authentication/templates/authentication/: login.html  signin.html
django_on_render/: asgi.py  settings.py  urls.py  wsgi.py
flake8_report/: authentication.migrations.0001_initial.report.html  authentication.migrations.0001_initial.source.html  index.html  topblog.admin.report.html  topblog.admin.source.html  topblog.models.report.html  topblog.models.source.html  topblog.tests.report.html  topblog.tests.source.html
static/assets/css/: styles.css
templates/: base.html
topblog/: apps.py  views.py
topblog/management/commands/: init_app_topblog.py
topblog/templates/topblog/: home.html
