[tool.poetry]
name = "deploy-django-on-render"
version = "0.1.0"
description = ""
authors = ["memphis-tools <rn@github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.11"
django-bootstrap-icons = "^0.8.3"
pytest = "^7.4.1"
psycopg = "^3.1.10"
python-dotenv = "^1.0.0"
pillow = "^10.3.0"
django-bootstrap-v5 = "^1.0.11"
dj-database-url = "^2.1.0"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
gunicorn = "^22.0.0"
flake8-html = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
