[tool.poetry]
name = "deploy-django-on-render"
version = "0.1.0"
description = ""
authors = ["memphis-tools <rn@github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11,<3.13"
django = "^4.2.14"
django-bootstrap-icons = "^0.9.0"
pytest = "^8.2.2"
django-pytest = "^0.2.0"
coverage = "6.5.0"
psycopg = "^3.1.10"
python-dotenv = "^1.0.0"
pillow = "^10.4.0"
django-bootstrap-v5 = "^1.0.11"
dj-database-url = "^2.1.0"
whitenoise = {extras = ["brotli"], version = "^6.7.0"}
gunicorn = "^22.0.0"
flake8-html = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
